fix header z-index

--- a/base/src/scss/_header.scss
+++ b/base/src/scss/_header.scss
@@ -103,8 +103,7 @@
 }
 
 header#content-header {
-  position: relative;
-  z-index: 2;
+
 }
 
 @include media-breakpoint-down(lg) {
