--- a/base/src/scss/common/_com-react.scss
+++ b/base/src/scss/common/_com-react.scss
@@ -62,3 +62,7 @@
     text-decoration: none;
  }
  
+smartweb-annuaire, smartweb-events{
+    position: relative;
+    z-index: -1;
+}
